# netbox-custom-objects

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COMPATIBILITY.md  README.md  SECURITY.md  clear_graphql_cache.js  graphql_cache_clear.html  mkdocs.models.yml  mkdocs.yml  pyproject.toml  ruff.toml
.claude/: README.md
.github/ISSUE_TEMPLATE/: 01-feature_request.yaml  02-bug_report.yaml  03-documentation_change.yaml  04-housekeeping.yaml
.github/workflows/: lint-tests.yaml  release.yaml
docs/: api.md  branching.md  changelog.md  configuration.md  field-attributes.md  graphql.md  index.md  installation.md  portable-schema.md  releases.md  rest-api.md
docs_models/netbox_custom_objects/: customobjecttype.md
netbox_custom_objects/: __init__.py  branching.py  checks.py  choices.py  comparator.py  constants.py  decorators.py  dynamic_forms.py  executor.py  exporter.py  field_types.py  fields.py  filtersets.py  forms.py  jinja_env.py  jobs.py  mixin_migration.py  models.py  navigation.py  object_actions.py  schema_format.py  search.py  serializers.py  signals.py  tab_views.py  tables.py  template_content.py  urls.py  utilities.py  views.py
netbox_custom_objects/api/: serializers.py  urls.py  views.py
netbox_custom_objects/graphql/: live.py  schema.py  types.py
netbox_custom_objects/migrations/: 0001_initial.py  0002_alter_customobjecttype_options.py  0002_customobject_created_customobject_last_updated.py  0002_customobjecttype_cache_timestamp.py  0002_customobjecttype_netbox_custom_objects_customobjecttype_slug.py  0002_customobjecttype_slug_customobjecttype_verbose_name.py  0002_ensure_fk_constraints.py  0002_rename_many_customobjecttypefield_is_cloneable_and_more.py  0003_customobjectobjecttype_remove_customobjecttype_slug_and_more.py  (+61 more)
netbox_service_mappings/: __init__.py  choices.py  forms.py  models.py  navigation.py  serializers.py  tables.py  template_content.py  urls.py  utilities.py  views.py
testing/: configuration.py  configuration_branching.py
(+115 files in other folders)
