[project]
name = "netboxlabs-netbox-custom-objects"
version = "0.5.1"
description = "A plugin to manage custom objects in NetBox"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "NetBox Limited Use License 1.0" }
authors = [
    { name = "NetBox Labs", email = "support@netboxlabs.com" }
]
maintainers = [
    { name = "NetBox Labs", email = "support@netboxlabs.com" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

dependencies = [
    "Django",
    "jsonschema",
    "packaging",
]

[project.optional-dependencies]
dev = ["check-manifest", "mkdocs", "mkdocs-material", "ruff"]
test = ["coverage", "pytest", "pytest-cov"]
# Install with `pip install "netboxlabs-netbox-custom-objects[branching]"` when
# pairing this plugin with netbox-branching.  Note: this extra also implies a
# stricter NetBox version requirement (>= 4.6.2), which is enforced at startup
# by netbox_custom_objects.checks rather than declared here.
branching = ["netbox-branching>=1.0.4"]

[project.urls]
"Homepage" = "https://netboxlabs.com/"

[project.scripts]

[tool.setuptools]
packages = [
    "netbox_custom_objects",
]
package-data = { "netbox_custom_objects" = ["**/*", "templates/**"] }
exclude-package-data = { netbox_custom_objects = ["tests/*"] }
license-files = ["LICENSE.md"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E1", "E2", "E3", "E501", "W"]
ignore = ["F403", "F405"]
preview = true

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
